package com.tuipay.models;

public enum TransactionType {
  TOP_UP,
  TUITION_PAYMENT
}
