@startuml
title Tuipay - Student-Only System UML

skinparam packageStyle rectangle

package "models" {
  class Student {
    - String studentId
    - String username
    - String fullName
    - String password
    - double tuitionBalance
    - double walletBalance
    - List<Transaction> transactions
    + topUp(amount: double)
    + payTuition(amount: double)
    + addTransaction(t: Transaction)
    + getTransactionHistory(): List<Transaction>
  }

  class Transaction {
    - String transactionId
    - String studentId
    - TransactionType type
    - double amount
    - Date transactionDate
    - double remainingTuitionBalance
    + generateReceipt(): String
  }

  enum TransactionType {
    TOP_UP
    TUITION_PAYMENT
  }

  Student "1" --> "*" Transaction
}

package "services" {
  class AppServices {
    - StudentManager studentManager
    - TransactionManager transactionManager
    - String currentAccountId
    + initializeManagers()
    + setCurrentAccount(id: String)
    + clearCurrentAccount()
    + login(id: String, password: String): Student
    + getCurrentStudent(): Student
  }

  class StudentManager {
    + getAllStudents(): List<Student>
    + findStudentById(id: String): Student
    + topUpWallet(student: Student, amount: double)
    + payTuition(student: Student, amount: double): boolean
  }

  class TransactionManager {
    + createTopUpTransaction(student: Student, amount: double): Transaction
    + createPaymentTransaction(student: Student, amount: double): Transaction
    + getAllTransactions(students: List<Student>): List<Transaction>
  }

  AppServices --> StudentManager
  AppServices --> TransactionManager

  StudentManager --> Student
  TransactionManager --> Transaction
}

package "pages (Swing UI)" {
  class AppFrame {
    + navigate(destination: String)
    + logout()
    + changeTheme(mode)
  }

  class LoginPage
  class Header
  class StudentPage
  class TopUpPage
  class PayTuitionPage
  class TransactionHistoryPage

  AppFrame --> LoginPage
  AppFrame --> Header
  AppFrame --> StudentPage
  AppFrame --> TopUpPage
  AppFrame --> PayTuitionPage
  AppFrame --> TransactionHistoryPage

  StudentPage --> AppServices
  TopUpPage --> AppServices
  PayTuitionPage --> AppServices
  TransactionHistoryPage --> AppServices
}

class App {
  + main()
}

class TestDataSeeder {
  + seed(AppServices)
}

App --> AppServices
App --> TestDataSeeder
TestDataSeeder --> StudentManager

@enduml
